--- a/journey/templates/journey/index.html
+++ b/journey/templates/journey/index.html
@@ -16,9 +16,9 @@
 <div class="image">
     <img src="{{ post.image }}" width="200px"/>
 </div>
-<div>
 <br>
-    {{post.title}}
+<div>
+    <h4><a href="{{ post.id }}">{{ post.title }}</a></h4>
 </div>
 <br>
 Міце зустрічі: {{post.place}}
