--- a/journey/templates/journey/base.html
+++ b/journey/templates/journey/base.html
@@ -8,7 +8,15 @@
 <div id="navigation">
 			<ul>
 			    <li><a href="/" class="active">Головна</a></li>
+
+
+				{% if user.is_authenticated %}
 			    <li><a href="/admin/">Адмін панель</a></li>
+				{% else %}
+    			<li><a href="/admin/logout/">Увійти</a></li>
+				{% endif %}
+
+
 
 			</ul>
 </div>
@@ -16,7 +24,8 @@
 {% block content %}
 
 {% endblock %}
-
-<p>#Ищу попутчика</p>
+<p>
+<span class="hashtag">#Шукаю попутника #Ищу попутчика</span>
+</p>
 </body>
 </html>
