--- a/journey/templates/journey/base.html
+++ b/journey/templates/journey/base.html
@@ -2,6 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
+	<link rel="stylesheet" href="./static/css/style.css">
     <title>Title</title>
 </head>
 <body>
@@ -24,8 +25,10 @@
 {% block content %}
 
 {% endblock %}
-<p>
-<span class="hashtag">#Шукаю попутника #Ищу попутчика</span>
-</p>
+<div class="hashtag">
+	<p>
+	<span>#Шукаю попутника #Ищу попутчика</span>
+	</p>
+</div>
 </body>
 </html>
