--- a/journey/static/css/style.css
+++ b/journey/static/css/style.css
@@ -1,3 +1,23 @@
+*{
+padding: 0;
+margin: 0;
+box-sizing: border-box;
+}
+
+body   {
+    background-color: #f5f7fa ;
+    font-family: 'Montserrat', sans-serif;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    }
+
+.wrapper {
+    background-color: #ffffff;
+    display: flex;
+    max-width: 320px;
+    box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.15);
 
 .hashtag{
     font-size: 12px;
