--- a/journey/templates/journey/base.html
+++ b/journey/templates/journey/base.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
 	<link rel="stylesheet" href="./static/css/style.css">
-    <title>Title</title>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+	<title>Title</title>
 </head>
 <body>
+
 <div id="navigation">
 			<ul>
 			    <li><a href="/" class="active">Головна</a></li>
-
-
 				{% if user.is_authenticated %}
 			    <li><a href="/admin/">Адмін панель</a></li>
 				{% else %}
     			<li><a href="/admin/logout/">Увійти</a></li>
 				{% endif %}
 
-
-
 			</ul>
 </div>
+
 
 {% block content %}
 
