--- a/journey/templates/journey/register.html
+++ b/journey/templates/journey/register.html
@@ -3,12 +3,12 @@
 
 
 {% block content %}
-
+<h1>Hello</h1>
 
 <div class="form-register">
     <h3>Залишити коментар</h3>
     <div>
-        <form action="{% url 'add_comments' post.id %}" method="post">
+        <form action="{% url 'add_post' post.id %}" method="post">
             {% csrf_token %}
             <div>
                 <label>Ваше імя</label>
@@ -54,8 +54,5 @@
     </div>
 
 </div>
-
-
-
 
 {% endblock%}
