add post buttom

--- a/journey/templates/journey/index.html
+++ b/journey/templates/journey/index.html
@@ -5,61 +5,18 @@
 
 <h1>Шукаю попутника</h1>
 <!--main container-->
-<div>
-    <aside class="wrapper">
+<div class="wrapper">
+    <aside class="sidebar">
         <div class="form-register">
-            <h3>Залишити коментар</h3>
-            <div>
-                <form action="#" method="post">
-                    {% csrf_token %}
-                    <div>
-                        <label>Ваше імя</label>
-                        <input type="text" name="autor">
-                    </div>
-                    <div>
-                        <label>Ваш вік</label>
-                        <input type="text" name="age">
-                    </div>
-                    <div>
-                        <label>Ваше імя M | F </label>
-                        <input type="text" name="sex">
-                    </div>
-                    <div>
-                        <label>Ваше фото</label>
-                        <input type="text" name="image">
-                    </div>
-                    <div>
-                        <label>Заголовок</label>
-                        <input type="text" name="title">
-                    </div>
-                    <div>
-                        <label>Місце подорожі</label>
-                        <input type="text" name="place">
-                    </div>
-                    <div>
-                        <label>Опис</label>
-                        <textarea name="description" cols="30" rows="10"></textarea>
-                    </div>
-                    <div>
-                        <label>Ваш телефон</label>
-                        <input type="text" name="phone">
-                    </div>
-                    <div>
-                        <label>Ваш емайл</label>
-                        <input type="email" name="mail">
-                    </div>
-                    <div>
-                        <input type="submit">
-                    </div>
+            <a href="{% url 'addpost' %}"><li><button class="btn btn-info"><i class="fas fa-plus-circle"></i>Додати запис</button></li></a>
+        </div>
 
-                </form>
-            </div>
     </aside>
 </div>
 {% for post in posts %}
 
 <div>
-
+    <aside>
     <div>
         <div>
             <h2><span><a href="{{ post.id }}">{{ post.title }}</a> {{post.autor}} {{post.age}}</span></h2>
@@ -76,14 +33,14 @@
     </div>
 
     <div>
-        <div>
-            {{post.date}}
-        </div>
+        <!--{{post.date}}-->
+
         <!--<br>-->
         <!--Тел: {{post.phone}}-->
         <!--<br>-->
         <!--Емайл: {{post.mail}}-->
     </div>
+    </aside>
 </div>
 {% endfor %}
 {% endblock %}
