--- a/journey/templates/journey/base.html
+++ b/journey/templates/journey/base.html
@@ -2,7 +2,9 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-	<link rel="stylesheet" href="./static/css/style.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link rel="stylesheet" href="{% static '/css/style.css' %}">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 	<title>Title</title>
 </head>
