--- a/journey/templates/journey/addpost.html
+++ b/journey/templates/journey/addpost.html
@@ -9,10 +9,15 @@
     <h3>Залишити повідомлення</h3>
 <form method="post">
             {% csrf_token %}
+            {{ form.autor }}<br>
+            {{ form.age }}<br>
+            {{ form.sex }}<br>
+            {{ form.image }}<br>
             {{ form.title }}<br>
-            {{ form.anons }}<br>
-            {{ form.ful_text }}<br>
-            {{ form.date }}<br>
+            {{ form.place }}<br>
+            {{ form.description }}<br>
+            {{ form.phone }}<br>
+            {{ form.mail }}<br>
             <span>{{ error }}</span>
           <button class="btn btn-success" type="submit">Готово</button>
 </form>
