--- a/journey/templates/journey/addpost.html
+++ b/journey/templates/journey/addpost.html
@@ -3,21 +3,14 @@
 
 
 {% block content %}
-<h1>Hello {{ autor }}</h1>
+<h1>{{ autor }}</h1>
 
 <div class="form-register">
     <h3>Залишити повідомлення</h3>
-<form method="post">
+
+<form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form.autor }}<br>
-            {{ form.age }}<br>
-            {{ form.sex }}<br>
-            {{ form.image }}<br>
-            {{ form.title }}<br>
-            {{ form.place }}<br>
-            {{ form.description }}<br>
-            {{ form.phone }}<br>
-            {{ form.mail }}<br>
+            {{ form.as_p }}
             <span>{{ error }}</span>
           <button class="btn btn-success" type="submit">Готово</button>
 </form>
