--- a/journey/templates/journey/base.html
+++ b/journey/templates/journey/base.html
@@ -9,7 +9,8 @@
 	<title>Title</title>
 </head>
 <body>
-
+<h1>Шукаю попутника</h1>
+<br>
 <div id="navigation">
 			<ul>
 			    <li><a href="/" class="active">Головна</a></li>
