--- a/journey/templates/journey/addpost.html
+++ b/journey/templates/journey/addpost.html
@@ -1,4 +1,5 @@
 {% extends 'journey/base.html' %}
+{% load static %}
 
 
 
@@ -8,7 +9,7 @@
 <div class="form-register">
     <h3>Залишити повідомлення</h3>
 
-<form method="post" enctype="multipart/form-data">
+<form action="{% url 'addpost' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <span>{{ error }}</span>
