--- a/journey/static/css/style.css
+++ b/journey/static/css/style.css
@@ -1,23 +1,50 @@
-*{
-padding: 0;
-margin: 0;
-box-sizing: border-box;
-}
+
 body {
-   margin: 0;
+    margin: 0;
 }
 .container {
-    background-color: #ffffff;
     display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    background-color: #ffffff;
     max-width: 100%;
-    margin: 0 auto; /*center*/
+
 }
 .main {
-   width: 100%;
-   min-height: 1px;
+    width: 100%;
+    min-height: 1px;
 }
 .aside {
-   background: blue;
-   width: 100%;
-   min-height: 1px;
+    width: 100%;
+    min-height: 1px;
+}
+
+.form-comment{
+    font-size: 18px;
+}
+.form-comment label{
+    margin: 10px 10 px;
+}
+.form-comment input{
+    border-radius: 15px;
+    padding: 15px;
+    height: 50px;
+    width: 250px;
+}
+
+.form-comment textarea{
+    border-radius: 15px;
+    padding: 15px;
+    height: 150px;
+    width: 100%;
+    resize: vertical;
+}
+.form-comment div{
+    margin: 10px;
+}
+.view-comment{
+    padding:10 px;
+    margin: 10px;
+    font-size: 18px;
+    border-radius: 15px;
 }
