--- a/journey/templates/journey/addpost.html
+++ b/journey/templates/journey/addpost.html
@@ -15,6 +15,10 @@
             <span>{{ error }}</span>
           <button class="btn btn-success" type="submit">Готово</button>
 </form>
+{% if img_obj %}
+  <h3>Succesfully uploaded : {{img_obj}}</h3>
+  <img src="{{ img_obj.image.url}}" alt="connect" style="max-height:300px">
+{% endif %}
 
 </div>
 
