--- a/journey/templates/journey/index.html
+++ b/journey/templates/journey/index.html
@@ -4,34 +4,39 @@
 
 {% block content %}
 
-<div class="form-register">
-    <a href="{% url 'addpost' %}">
-        <button class="btn btn-info"><i class="fas fa-plus-circle"></i>Додати запис</button>
-    </a>
-</div>
 <!--main container-->
 <div class="container">
 
-    <main class="main">
-        <div>
-            {% for post in posts %}
-        </div>
-    </main>
+
     <div>
-        <aside class="aside">
+        {% for post in posts %}
+    </div>
+    <div>
+
             <div>
                 <h2><span><a href="{{ post.id }}">{{ post.title }}</a> {{post.autor}} {{post.age}}</span></h2>
             </div>
 
+            {% if post.image %}
             <div class="image">
                     <span>
                         <img src="{{ post.image }}" width="200px"/>  {{post.description}}
                     </span>
             </div>
+            {% else %}
+                    <span>
+                        <img src="{% static 'img/default.png' %}" width="200px"/>  {{post.description}}
+                    </span>
+            {% endif %}
+
+
+
+
+
             <div>
                 <h4>Міце зустрічі: {{post.place}}</h4>
             </div>
-        </aside>
+
     </div>
 </div>
     {% endfor %}
