--- a/journey/templates/journey/base.html
+++ b/journey/templates/journey/base.html
@@ -2,35 +2,44 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-	<title>Title</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <title>Title</title>
 </head>
 <body>
-<h1>Шукаю попутника</h1>
-<br>
-<div id="navigation">
-			<ul>
-			    <li><a href="/" class="active">Головна</a></li>
-				{% if user.is_authenticated %}
-			    <li><a href="/admin/">Адмін панель</a></li>
-				{% else %}
-    			<li><a href="/admin/logout/">Увійти</a></li>
-				{% endif %}
+<main class="main">
+    <div class="navigation" id="navigation">
+        <h1>Шукаю попутника</h1>
+        <br>
+        <ul>
+            <li><a href="/" class="active">Головна</a></li>
+            {% if user.is_authenticated %}
+            <li><a href="/admin/">Адмін панель</a></li>
+            {% else %}
+            <li><a href="/admin/logout/">Увійти</a></li>
+            {% endif %}
 
-			</ul>
-</div>
+        </ul>
+        <div class="form-register">
+            <a href="{% url 'addpost' %}">
+                <button class="btn btn-info"><i class="fas fa-plus-circle"></i>Додати запис</button>
+            </a>
+        </div>
+    </div>
+</main>
 
+<aside class="aside">
+    {% block content %}
 
-{% block content %}
+    {% endblock %}
+    <aside/>
 
-{% endblock %}
-<div class="hashtag">
-	<p>
-	<span>#Шукаю попутника #Ищу попутчика</span>
-	</p>
-</div>
+    <div class="hashtag">
+        <p>
+            <span>#Шукаю попутника #Ищу попутчика</span>
+        </p>
+    </div>
 </body>
 </html>
