--- a/journey/static/css/style.css
+++ b/journey/static/css/style.css
@@ -1,31 +1,72 @@
-
-body {
-
+*{
     margin: 0;
+    padding: 0;
+}
+
+#header {
+    width: 100%;
+    height: 70px;
+    text-align: center;
+    border-bottom: 4px solid silver;
+    background: #333;
+    color: #fff;
+    line-height: 50px;
+    margin-bottom: 40px; /*otstup*/
+}
+#footer{
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    border-top: 4px solid silver;
+    background: #333;
+    color: #fff;
+    line-height: 50px;
+    margin-bottom: 0px;
+
+}
+#main{
+    width: 50%;
+    margin-left: 10%;
+    background: #fafafa;
+    border: 1px solid silver;
+    padding: 20px 2.5%;
+}
+#aside {
+    width: 20%;
+    height: 100%;
+    padding: 20px 2.5%;
+    background: #fafafa;
+    border: 1px solid silver;
+
+}
+
+
+body{
+
 }
 .navigation{
     background-color: #E0EBFE;
 }
 
-.container {
+/*.container{
     display: flex;
     background-color: #ffffff;
-    max-width: 100%;
+    max-width: 100%;*/
 
 }
-.main {
+.main{
     display: flex;
     background-color: #E0EBFE;
     width: 100%;
     min-height: 1px;
 }
-.aside {
+.aside{
 
     width: 100%;
     min-height: 1px;
 }
 .form-register{
-    border-radius: 15px;
+
 }
 .form-comment{
     font-size: 18px;
