--- a/journey/templates/journey/base.html
+++ b/journey/templates/journey/base.html
@@ -9,34 +9,43 @@
     <title>Title</title>
 </head>
 <body>
-<main class="main">
-    <div class="navigation" id="navigation">
+    <div id="header">
         <h1>Шукаю попутника</h1>
-        <br>
-        <ul>
-            <li><a href="/" class="active">Головна</a></li>
-            {% if user.is_authenticated %}
-            <li><a href="/admin/">Адмін панель</a></li>
-            {% else %}
-            <li><a href="/admin/logout/">Увійти</a></li>
-            {% endif %}
+    </div>
 
-        </ul>
-        <div class="form-register">
-            <a href="{% url 'addpost' %}">
-                <button class="btn btn-info"><i class="fas fa-plus-circle"></i>Додати запис</button>
-            </a>
+
+
+    <div id="fle">
+
+
+        {% block content %}
+        <div id="main">
+
+        <div>
+        {% endblock %}
+
+
+
+
+        <div id="aside">
+            <ul>
+                <li><a href="/" class="active">Головна</a></li>
+                {% if user.is_authenticated %}
+                <li><a href="/admin/">Адмін панель</a></li>
+                {% else %}
+                <li><a href="/admin/logout/">Увійти</a></li>
+                {% endif %}
+
+            </ul>
+            <div class="form-register">
+                <a href="{% url 'addpost' %}">
+                    <button class="btn btn-info"><i class="fas fa-plus-circle"></i>Додати запис</button>
+                </a>
+            </div>
         </div>
     </div>
-</main>
 
-<aside class="aside">
-    {% block content %}
-
-    {% endblock %}
-    <aside/>
-
-    <div class="hashtag">
+    <div id="footer">
         <p>
             <span>#Шукаю попутника #Ищу попутчика</span>
         </p>
