--- a/journey/templates/journey/base.html
+++ b/journey/templates/journey/base.html
@@ -11,23 +11,14 @@
 <body>
     <div id="header">
         <h1>Шукаю попутника</h1>
+        <img class="myfoto" src="static/img/1.png" width="200px" height="70px" alt="My foto">
     </div>
 
 
 
-    <div id="fle">
+    <div id="flex">
 
-
-        {% block content %}
-        <div id="main">
-
-        <div>
-        {% endblock %}
-
-
-
-
-        <div id="aside">
+                <div id="aside">
             <ul>
                 <li><a href="/" class="active">Головна</a></li>
                 {% if user.is_authenticated %}
@@ -44,6 +35,17 @@
             </div>
         </div>
     </div>
+        <div>
+        {% block content %}
+        <div id="main">
+
+        <div>
+        {% endblock %}
+        </div>
+
+
+
+
 
     <div id="footer">
         <p>
