add autpad place

--- a/journey/templates/journey/detail.html
+++ b/journey/templates/journey/detail.html
@@ -25,7 +25,7 @@
 
     <div align="center">
         <br>
-        Міце зустрічі: {{post.place}}
+        Міце зустрічі: {{post.get_place_display}}
     </div>
 
     <div>
