--- a/journey/templates/journey/index.html
+++ b/journey/templates/journey/index.html
@@ -34,7 +34,7 @@
 
 
             <div>
-                <h4>Міце зустрічі: {{ post.place }}</h4>
+                <h4>Міце зустрічі: {{ post.get_place_display }}</h4>
             </div>
 
     </div>
