--- a/journey/templates/journey/index.html
+++ b/journey/templates/journey/index.html
@@ -1,13 +1,10 @@
 {% extends 'journey/base.html' %}
 {% load static %}
-
+{% block title %}Main{% endblock %}
 
 {% block content %}
 
 <!--main container-->
-
-
-
     <div>
         {% for post in posts %}
     </div>
