--- a/journey/static/css/style.css
+++ b/journey/static/css/style.css
@@ -2,8 +2,9 @@
     margin: 0;
     padding: 0;
 }
-#flex{
+.flex{
     display: flex;
+    padding: 20px;
 }
 #header {
     width: 100%;
@@ -12,8 +13,16 @@
     background: #333;
     color: #fff;
     display: flex;
-    flex-direction: row-reverse
+    justify-content: center;
+    align-items: center;
 }
+
+#header .myfoto {
+    width: 200px;
+    height: 70px;
+    margin-right: 20px;
+}
+
 #footer{
     width: 100%;
     height: 50px;
@@ -39,14 +48,11 @@
     padding: 20px 2.5%;
     background: #fafafa;
     border: 1px solid silver;
-
 }
-
-
 body{
 
 }
-.navigation{
+.navi{
     background-color: #E0EBFE;
 }
 }
