--- a/journey/templates/journey/index.html
+++ b/journey/templates/journey/index.html
@@ -5,36 +5,27 @@
 {% block content %}
 
 <!--main container-->
-    <div>
-        {% for post in posts %}
-    </div>
-    <div>
+        <div id="main">
 
-            <div>
+            {% for post in posts %}
+
                 <h2><span><a href="{{ post.id }}">{{ post.title }}</a> {{post.autor}} {{post.age}}</span></h2>
-            </div>
-
-            {% if post.image %}
-            <div class="image">
-                    <span>
-                        <img src="{{ post.image }}" width="200px"/>  {{post.description}}
-                    </span>
-            </div>
-            {% else %}
-                    <span>
-                        <img src="{% static 'img/default.png' %}" width="200px"/>  {{post.description}}
-                    </span>
-            {% endif %}
 
 
+                {% if post.image %}
+                <div class="image">
+                        <span>
+                            <img src="{{ post.image }}" width="200px"/>  {{post.description}}
+                        </span>
+                </div>
+                {% else %}
+                        <span>
+                            <img src="{% static 'img/default.png' %}" width="200px"/>  {{post.description}}
+                        </span>
+                {% endif %}
 
+            <h4>Міце зустрічі: {{ post.get_place_display }}</h4>
 
-
-            <div>
-                <h4>Міце зустрічі: {{ post.get_place_display }}</h4>
-            </div>
-
-    </div>
-
-    {% endfor %}
-    {% endblock %}
+        {% endfor %}
+        {% endblock %}
+        </div>
