--- a/journey/static/css/style.css
+++ b/journey/static/css/style.css
@@ -2,17 +2,32 @@
     margin: 0;
     padding: 0;
 }
-.flex{
-    display: flex;
-    flex-direction: column;
+aside{
+    float: left;
+    /*position: fixed; /* изменяем позиционирование */
+    position: -webkit-sticky; /* для Safari и iOS */
+    position: sticky;
+    top: 0; /* прикрепляем к верху экрана */
+    background: #E0EBFE;/*#181818;*/
+    width: 22%;
+    padding: 2.5%;
+    height: 100vh;
+    color: #fff;
+    border-right: 1px solid silver;
 }
-#header {
+/*#aside {
+    width: 20%;
+    height: 100%;
+    padding: 20px 2.5%;
+    background: #fafafa;
+    border: 1px solid silver;
+}*/
+header {
     width: 100%;
     height: 70px;
     border-bottom: 4px solid silver;
     background: #333;
     color: #fff;
-    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -23,33 +38,36 @@
     margin-right: 20px;
 }
 
-#footer{
+footer{
     width: 100%;
     height: 50px;
     text-align: center;
     border-top: 4px solid silver;
     background: #333;
     color: #fff;
-    line-height: 50px;
-    margin-bottom: 0px;
+    justify-content: center;
+    align-items: center;
 
+    /*line-height: 50px;
+    margin-bottom: 0px;
+    */
 }
-#main{
+/*main{
     background: #fafafa;
     border: 1px solid silver;
     padding 20px;
 
+}*/
+main .features {
+    float: left;
+    color: #fff;
+    margin-top: 100px;
+    text-align: center;
+    width: 75%
 }
-#aside {
-    width: 20%;
-    height: 100%;
-    padding: 20px 2.5%;
-    background: #fafafa;
-    border: 1px solid silver;
-}
-body{
+main .features h1 {font-size: 50px;}
+main .features p {max-width: 400px; margin:20px auto}
 
-}
 .navi{
     background-color: #E0EBFE;
 }
