--- a/journey/templates/journey/base.html
+++ b/journey/templates/journey/base.html
@@ -36,11 +36,12 @@
 
     {% endblock %}
     </main>
-
+<giv>
     <footer>
         <p>
             <span>#Шукаю попутника #Ищу попутчика</span>
         </p>
     </footer>
+</giv>
 </body>
 </html>
