--- a/journey/static/css/style.css
+++ b/journey/static/css/style.css
@@ -8,10 +8,10 @@ aside{
     position: -webkit-sticky; /* для Safari и iOS */
     position: sticky;
     top: 0; /* прикрепляем к верху экрана */
-    background: #E0EBFE;/*#181818;*/
+    background: #2c2c2c;
     width: 22%;
     padding: 2.5%;
-    height: 100vh;
+    height: 90hv;
     color: #fff;
     border-right: 1px solid silver;
 }
@@ -92,7 +92,7 @@ main .features p {max-width: 400px; margin:20px auto}
     border-radius: 15px;
     padding: 15px;
     height: 150px;
-    width: 100%;
+    width: 70%;
     resize: vertical;
 }
 .form-comment div{
