--- a/journey/templates/journey/addpost.html
+++ b/journey/templates/journey/addpost.html
@@ -14,7 +14,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <span>{{ error }}</span>
-          <button class="btn btn-success" type="submit">Готово</button>
+          <button class="btn btn-info" type="submit">Готово</button>
 </form>
 {% if img_obj %}
   <h3>Succesfully uploaded : {{img_obj}}</h3>
