--- a/journey/static/css/style.css
+++ b/journey/static/css/style.css
@@ -11,8 +11,8 @@ header {
     border-bottom: 4px solid silver;
     background: #333;
     color: #fff;
-    justify-content: center;
-    align-items: center;
+    /*justify-content: center;
+    align-items: center;*/
 }
 
 #header .foto {
@@ -32,6 +32,13 @@ aside{
     color: #fff;
     border-right: 1px solid silver;
 }
+main{
+    padding: 70px;
+
+/*    text-align: center;
+    width: 75%*/
+}
+
 footer{
     width: 100%;
     height: 50px;
@@ -42,16 +49,6 @@ footer{
     justify-content: center;
     align-items: center;
 }
-/*main .features {
-    float: left;
-    color: #fff;
-    margin-top: 100px;
-    text-align: center;
-    width: 75%
-}
-main .features h1 {font-size: 50px;}
-main .features p {max-width: 400px; margin:20px auto}*/
-
 .navi{
     background-color: #E0EBFE;
 }
