--- a/journey/templates/journey/base.html
+++ b/journey/templates/journey/base.html
@@ -29,6 +29,9 @@
                 <button class="btn btn-outline-primary"><i class="fas fa-plus-circle"></i>Додати запис</button>
             </a>
         <div>
+
+</div>
+<div class="sort">
     <form>
       <label>
         <input type="radio" name="sort" value="date" checked>
@@ -45,9 +48,6 @@
       <button type="submit">Сортувати</button>
     </form>
 </div>
-
-
-
 
     </aside>
 
