--- a/journey/templates/journey/detail.html
+++ b/journey/templates/journey/detail.html
@@ -7,13 +7,13 @@
 <!--post container-->
 {% if post.image %}
     <div class="image">
-        <p align="center">
+        <p>
             <img src="{{ post.image.url }}" width="400px"/>
         </p>
     </div>
 {% else %}
     <div class="image">
-        <p align="center">
+        <p>
             <img src="{% static 'img/default.png' %}" width="300px"/>
         </p>
     </div>
@@ -22,13 +22,11 @@
     <div align="center">
         <span>{{post.title}}  {{post.autor}}  {{post.age}}</span>
     </div>
-
     <div align="center">
-        <br>
         Міце зустрічі: {{post.get_place_display}}
     </div>
 
-    <div>
+    <div class="form-comment textarea">
         <br>
         {{post.description}}
     </div>
@@ -44,47 +42,46 @@
         {{post.date}}
         <br>
     </div>
-</div>
 
-<div class="form-comment">
-    <h3>Залишити коментар</h3>
-    <div>
-        <form action="{% url 'add_comments' post.id %}" method="post">
-            {% csrf_token %}
-            <div>
-                <label>Ваш коментар</label>
-                <textarea name="text_comments" id="" cols="30" rows="10"></textarea>
-            </div>
-            <div>
-                <label>Ваше імя</label>
-                <input type="text" name="name">
-            </div>
-            <div>
-                <label>Ваш емайл</label>
-                <input type="email" name="email">
-            </div>
-            <div>
-                <input type="submit">
-            </div>
+    <div class="form-comment">
+        <h3>Залишити коментар</h3>
+        <div>
+            <form action="{% url 'add_comments' post.id %}" method="post">
+                {% csrf_token %}
+                <div>
+                    <label>Ваш коментар</label>
+                    <textarea name="text_comments" id="" cols="30" rows="10"></textarea>
+                </div>
+                <div>
+                    <label>Ваше імя</label>
+                    <input type="text" name="name">
+                </div>
+                <div>
+                    <label>Ваш емайл</label>
+                    <input type="email" name="email">
+                </div>
+                <div>
+                    <input type="submit">
+                </div>
 
-        </form>
-    </div>
-
-</div>
-
-<div>
-    {% for comment in post.comments_set.all %}
-    <div class="view-comment">
-        <h4>{{ comment.name }}</h4>
-        <p>
-            {{ comment.text_comments }}
-        </p>
-        <div><span class="contact"></span> <a class="color" e href="mailto:{{ comment.email }}">{{ comment.email }}</a>
+            </form>
         </div>
 
-
     </div>
-    {% endfor %}
-</div>
+
+    <div>
+        {% for comment in post.comments_set.all %}
+        <div class="view-comment">
+            <h4>{{ comment.name }}</h4>
+            <p>
+                {{ comment.text_comments }}
+            </p>
+            <div><span class="contact"></span> <a class="color" e href="mailto:{{ comment.email }}">{{ comment.email }}</a>
+            </div>
+
+
+        </div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
