--- a/journey/templates/journey/detail.html
+++ b/journey/templates/journey/detail.html
@@ -26,7 +26,7 @@
         Міце зустрічі: {{post.get_place_display}}
     </div>
 
-    <div class="form-comment textarea">
+    <div class="description">
         <br>
         {{post.description}}
     </div>
